criação dos campos pratos princiapis  e configurado o respónsivo

--- a/index.html
+++ b/index.html
@@ -5,14 +5,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O Bahia Gastrobar</title>
+    <!--Link das fontes-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Quicksand:wght@300..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <!--Link do SCSS-->
     <link rel="stylesheet" href="./build/main.css">
+
 </head>
 
 <body>
 
     <header>
-        <!--banner com imagem-->
+        <!--
+        <div class="divisor">
+            <div class="conatiner-jr">
+                <img src="./src/image/loja.jpg" class="foodstore" alt="Imagem da entrada da loja">
+                <div class="log-div">
+                    <img src="./src/image/logo.jpg" alt="Logo do chapeu do bahia">
+                    <h2>O bahia Gastrobar</h2>
+                    <div class="links">
+                        <ul>
+                            <li>Inicial</li>
+                            <li>Inicial</li>
+                            <li>Inicial</li>
+                            <li>Inicial</li>
+
+                        </ul>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+           -->
     </header>
+ 
 
     <main>
         <div class="container">
@@ -28,10 +58,11 @@
 
                     <li class="food-line">
                         <div class="div">
-                            
+
                             <div class="div-block">
-                                <h3 class="Tittle-foods">Baião de dois do Bahia</h3>
-                                <p><b>Nosso sucesso de vendas:</b>Feito com Feijão de corda, arroz, manteiga de garrafa calabresa, bacon queijo coalho, jabá desfiado e pimenta biquinho.</p>
+                                <h3 class="tittle-foods">Baião de dois do Bahia</h3>
+                                <p>Feito com Feijão de corda, arroz, manteiga de
+                                    garrafa calabresa, bacon queijo coalho, jabá desfiado e pimenta biquinho.</p>
                                 <b>individual: R$ 35,00</b>
                                 <b>Pequeno: R$ 50,00</b>
                                 <b>Grande: R$ 80,00</b>
@@ -42,15 +73,156 @@
 
                     <li class="food-line">
                         <div class="div">
-                            
+
                             <div class="div-block">
                                 <h3 class="Tittle-foods">Baião com Picanha</h3>
-                                <p><b>Nosso sucesso de vendas:</b>Feito com Feijão de corda, arroz, manteiga de garrafa calabresa, bacon queijo coalho, jabá desfiado, pimenta biquinho e Picanha.</p>
+                                <p>Feito com Feijão de corda, arroz, manteiga de
+                                    garrafa calabresa, bacon queijo coalho, jabá desfiado, pimenta biquinho e Picanha.
+                                </p>
                                 <b>individual: R$ 55,00</b>
                                 <b>Pequeno: R$ 75,00</b>
                                 <b>Grande: R$ 120,00</b>
                             </div>
-                            <img class="image-foods" src="./src/image/cardapio/pratosEspeciais/bahiaoPicanha.jpg" alt="">
+                            <img class="image-foods" src="./src/image/cardapio/pratosEspeciais/bahiaoPicanha.jpg"
+                                alt="">
+                        </div>
+                    </li>
+
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="Tittle-foods">Feijoada Light (as Quartas e sábados até as 16hrs)</h3>
+                                <p>Acompanha: arroz branco, torresmo, farofa,couve refolgada, laranja e molho de pimenta.
+                                </p>
+                                <b>individual: R$ 55,00</b>
+                                <b>Pequeno: R$ 75,00</b>
+                                <b>Grande: R$ 120,00</b>
+                            </div>
+                            <img class="image-foods" src="./src/image/cardapio/pratosEspeciais/feijoada.jpg"
+                                alt="Prato de feijpada completa">
+                        </div>
+                    </li>
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="Tittle-foods">Biro biro com Picanha</h3>
+                                <p>Nosso delicioso arroz biro biro ,é servido com couve refolgada, vinagrete e nossa suculenta Picanha.
+                                </p>
+                                <b>individual: R$ 55,00</b>
+                                <b>Pequeno: R$ 75,00</b>
+                                <b>Grande: R$ 120,00</b>
+                            </div>
+                            <img class="modify image-foods" src="./src/image/cardapio/pratosEspeciais/biro-biro.jpg"
+                                alt="imagem do arroz biro biro com Picanha">
+                        </div>
+                    </li>
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="Tittle-foods">Tropeiro com Picanha</h3>
+                                <p>clássico feijão tropeiro, é servido com couve puxado na manteiga, torresmo, ovo mexido e a nossa picanha acompanha arroz e vinagrete.
+                                </p>
+                                <b>individual: R$ 65,00</b>
+                                <b>Pequeno: R$ 85,00</b>
+                                <b>Grande: R$ 120,00</b>
+                            </div>
+                            <img class="image-foods" src="./src/image/cardapio/pratosEspeciais/tropeiro.jpg"
+                                alt="imagem do prato tropeiro com picanha">
+                        </div>
+                    </li>
+
+
+                </ul>
+            </section>
+
+            <section class="main-dishes">
+
+                <h2 class="tittle">Pratos principais</h2>
+
+                <ul class="foods-list">
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Contra Filé á Cavalo</h3>
+                                <p>Acompanha Arroz, Feijão, Fritas e Salada.
+                                    Serve 1 pessoas.</p>
+                                <b>individual: R$ 30,00</b>
+                            </div>
+                            <img class="image-foods" src="./src/image/cardapio/pratosPrincipais/cavalo.jpg" alt="Prato com contra filé e fritas">
+                        </div>
+                    </li>
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="Tittle-foods">Baião com Picanha</h3>
+                                <p>Feito com Feijão de corda, arroz, manteiga de
+                                    garrafa calabresa, bacon queijo coalho, jabá desfiado, pimenta biquinho e Picanha.
+                                </p>
+                                <b>individual: R$ 55,00</b>
+                                <b>Pequeno: R$ 75,00</b>
+                                <b>Grande: R$ 120,00</b>
+                            </div>
+                            <img class="image-foods" src="./src/image/cardapio/pratosEspeciais/bahiaoPicanha.jpg"
+                                alt="">
+                        </div>
+                    </li>
+
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="Tittle-foods">Feijoada Light (as Quartas e sábados até as 16hrs)</h3>
+                                <p>Acompanha: arroz branco, torresmo, farofa,couve refolgada, laranja e molho de pimenta.
+                                </p>
+                                <b>individual: R$ 55,00</b>
+                                <b>Pequeno: R$ 75,00</b>
+                                <b>Grande: R$ 120,00</b>
+                            </div>
+                            <img class="image-foods" src="./src/image/cardapio/pratosEspeciais/feijoada.jpg"
+                                alt="Prato de feijpada completa">
+                        </div>
+                    </li>
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="Tittle-foods">Biro biro com Picanha</h3>
+                                <p>Nosso delicioso arroz biro biro ,é servido com couve refolgada, vinagrete e nossa suculenta Picanha.
+                                </p>
+                                <b>individual: R$ 55,00</b>
+                                <b>Pequeno: R$ 75,00</b>
+                                <b>Grande: R$ 120,00</b>
+                            </div>
+                            <img class="modify image-foods" src="./src/image/cardapio/pratosEspeciais/biro-biro.jpg"
+                                alt="imagem do arroz biro biro com Picanha">
+                        </div>
+                    </li>
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="Tittle-foods">Tropeiro com Picanha</h3>
+                                <p>clássico feijão tropeiro, é servido com couve puxado na manteiga, torresmo, ovo mexido e a nossa picanha acompanha arroz e vinagrete.
+                                </p>
+                                <b>individual: R$ 65,00</b>
+                                <b>Pequeno: R$ 85,00</b>
+                                <b>Grande: R$ 120,00</b>
+                            </div>
+                            <img class="image-foods" src="./src/image/cardapio/pratosEspeciais/tropeiro.jpg"
+                                alt="imagem do prato tropeiro com picanha">
                         </div>
                     </li>
 
