--- a/index.html
+++ b/index.html
@@ -49,23 +49,23 @@
         <div class="container">
             <nav>
                 <div class="scroll-container" id="scrollContainer">
-                    <a href="#">Pratos especias</a>
-                    <a href="#">Pratos principais</a>
-                    <a href="#">Porções</a>
-                    <a href="#">Combos</a>
-                    <a href="#">Caipirinha Tradicional</a>
-                    <a href="#">Caipirinha Especiais</a>
-                    <a href="#">Gins Tradicionais</a>
-                    <a href="#">Cervejas</a>
-                    <a href="#">Bebidas não alcoólicas</a>
-                    <a href="#">Sucos naturais</a>
+                    <a href="#special-dishes">Pratos especias</a>
+                    <a href="#main-dishes">Pratos principais</a>
+                    <a href="#portions">Porções</a>
+                    <a href="#combos">Combos</a>
+                    <a href="#caipirinhaTradicional">Caipirinha Tradicional</a>
+                    <a href="#caipirinhaEspeciais">Caipirinha Especiais</a>
+                    <a href="#ginsTradicionais">Gins Tradicionais</a>
+                    <a href="#cervejas">Cervejas</a>
+                    <a href="#bebidasNAlcool">Bebidas não alcoólicas</a>
+                    <a href="#bebidasNAlcool">Sucos naturais</a>
                 </div>
 
             </nav>
 
 
             <!--Aqui começa os Pratos Especiais-->
-            <section class="special-dishes">
+            <section class="special-dishes" id="special-dishes">
 
                 <h2 class="tittle">Pratos especias</h2>
 
@@ -160,7 +160,7 @@
             </section>
 
             <!--Aqui começa os Pratos Principais-->
-            <section class="main-dishes">
+            <section class="main-dishes" id="main-dishes">
 
                 <h2 class="tittle">Pratos principais</h2>
 
@@ -282,7 +282,7 @@
 
             <!--Aqui começa os Porções-->
 
-            <section class="main-portions">
+            <section class="main-portions" id="portions">
 
                 <h2 class="tittle">Porções</h2>
 
@@ -401,7 +401,7 @@
                 </ul>
             </section>
 
-            <section class="combos">
+            <section class="combos" id="combos">
 
                 <h2 class="tittle">Combos</h2>
 
@@ -505,7 +505,7 @@
                 </ul>
             </section>
 
-            <section class="caipirinhaTradicional">
+            <section class="caipirinhaTradicional" id="caipirinhaTradicional">
 
                 <h2 class="tittle">Caipirinha Tradicional 700Ml</h2>
 
@@ -567,7 +567,7 @@
                 </ul>
             </section>
 
-            <section class="caipirinhaEspeciais">
+            <section class="caipirinhaEspeciais" id="caipirinhaEspeciais">
 
                 <h2 class="tittle">Caipirinha Especiais</h2>
 
@@ -602,7 +602,7 @@
                 </ul>
             </section>
 
-            <section class="ginsTradicionais">
+            <section class="ginsTradicionais" id="ginsTradicionais">
 
                 <h2 class="tittle">Gins Tradicionais</h2>
 
@@ -699,7 +699,7 @@
                 </ul>
             </section>
 
-            <section class="cervejas">
+            <section class="cervejas" id="cervejas">
 
                 <h2 class="tittle">Cervejas</h2>
 
@@ -738,7 +738,7 @@
             </section>
 
 
-            <section class="bebidasNAlcool">
+            <section class="bebidasNAlcool" id="bebidasNAlcool">
 
                 <h2 class="tittle">Bebidas não alcoólicas</h2>
 
@@ -856,7 +856,6 @@
                     </li>
                 </ul>
             </section>
-
 
             </section>
         </div>
