criação do navbar

--- a/index.html
+++ b/index.html
@@ -14,34 +14,59 @@
         rel="stylesheet">
     <!--Link do SCSS-->
     <link rel="stylesheet" href="./build/main.css">
-
+    <!--Link do icons do BootstrapS-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
 
     <header>
-        <!--
-        <div class="divisor">
-            <div class="conatiner-jr">
-                <img src="./src/image/loja.jpg" class="foodstore" alt="Imagem da entrada da loja">
-                <div class="log-div">
-                    <img src="./src/image/logo.jpg" alt="Logo do chapeu do bahia">
-                    <h2>O bahia Gastrobar</h2>
-                    <div class="links">
-                        <ul>
-                            <li>Inicial</li>
-                            <li>Inicial</li>
-                            <li>Inicial</li>
-                            <li>Inicial</li>
+        <div class="containerHeader">
+            <div class="link-list">
+                <img src="./src/image/logo.jpg" class="logo" alt="foto do logo da loja">
 
-                        </ul>
-                    </div>
+                <div>
+                    <h3 class="tittle-logo">O Bahia Gastrobar</h3>
 
+                    <ul class="list">
+                        <li class="list-item">
+                            <a href="#">
+                                <i class="bi bi-house-door-fill"></i>
+                            </a>
+                        </li>
 
+                        <li class="list-item">
+                            <a href="#">
+                                <i class="bi bi-list"></i>
+                            </a>
+                        </li>
+
+                        <li class="list-item">
+                            <a href="#">
+                                <i class="bi bi-instagram"></i>
+                            </a>
+                        </li>
+
+                        <li class="list-item">
+                            <a href="#">
+                                <i class="bi bi-whatsapp"></i>
+                            </a>
+                        </li>
+
+                        <li class="list-item">
+                            <a href="#">
+                                <i class="bi bi-wifi"></i>
+                            </a>
+                        </li>
+                    </ul>
+
+                    <a href="#" class="avaliar">Avaliar
+                        <i class="bi bi-star-fill"></i>
+                    </a>
                 </div>
             </div>
+
         </div>
-           -->
     </header>
 
 
