Criamos a parte das descrições e links

--- a/index.html
+++ b/index.html
@@ -30,25 +30,26 @@
 
                     <ul class="list">
                         <li class="list-item">
-                            <a href="#">
+                            <a href="./principal.html">
                                 <i class="bi bi-house-door-fill"></i>
                             </a>
                         </li>
 
                         <li class="list-item">
-                            <a href="#">
-                                <i class="bi bi-list"></i>
+                            <a href="./index.html">
+                                <i class="bi bi-cup-straw"></i>
                             </a>
                         </li>
 
                         <li class="list-item">
-                            <a href="#">
+                            <a href="https://www.instagram.com/obahiagastrobar_?igsh=MTN3dnVrZHVvYXV2bA=="
+                                target="_blank">
                                 <i class="bi bi-instagram"></i>
                             </a>
                         </li>
 
                         <li class="list-item">
-                            <a href="#">
+                            <a href="https://wa.me/5511988345332" target="_blank">
                                 <i class="bi bi-whatsapp"></i>
                             </a>
                         </li>
@@ -60,7 +61,8 @@
                         </li>
                     </ul>
 
-                    <a href="#" class="avaliar">Avaliar
+                    <a href="https://www.google.com.br/maps/place/O+Bahia+gastrobar/@-23.6035396,-46.5269686,21z/data=!4m8!3m7!1s0x94ce5d0012fa266b:0x2acce44a479cf0ff!8m2!3d-23.6034946!4d-46.5268297!9m1!1b1!16s%2Fg%2F11w87djsdp?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D"
+                        class="avaliar" target="_blank">Avaliar
                         <i class="bi bi-star-fill"></i>
                     </a>
                 </div>
@@ -886,6 +888,55 @@
         </div>
     </main>
 
+    <footer>
+        <section>
+            <h2>
+                <img src="./src/image/logo.jpg" alt="Logo do Bahia Gastrobar">
+            </h2>
+
+            <div>
+                <ul>
+                    <li>
+                        <a href="./principal.html">
+                            <i class="bi bi-house-door-fill"></i>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="./index.html">
+                            <i class="bi bi-cup-straw"></i>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://www.instagram.com/obahiagastrobar_?igsh=MTN3dnVrZHVvYXV2bA==" target="_blank">
+                            <i class="bi bi-instagram"></i>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://wa.me/5511988345332" target="_blank">
+                            <i class="bi bi-whatsapp"></i>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="#">
+                            <i class="bi bi-wifi"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+        </section>
+
+
+        <p>© 2025 Bahia Gastrobar. Todos os direitos são reservados.</p>
+
+    </footer>
+
+
+    <script src="./src/js/main.js"></script>
 </body>
 
 </html>
