criamos o link do wifi

--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
 
                         <li class="list-item">
                             <a href="#">
-                                <i class="bi bi-wifi"></i>
-                            </a>
+                                <i class="bi bi-wifi info-button" onclick="mostrarInformacoes()">
+                                    <div class="info-message" id="infoMessage">
+                                        <strong>Rede: bahia_5G <br> senha: 123456789</strong><br>
+                                    </div>
+                                </i>
                         </li>
                     </ul>
 
@@ -917,12 +920,6 @@
                     <li>
                         <a href="https://wa.me/5511988345332" target="_blank">
                             <i class="bi bi-whatsapp"></i>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="#">
-                            <i class="bi bi-wifi"></i>
                         </a>
                     </li>
                 </ul>
