--- a/principal.html
+++ b/principal.html
@@ -55,8 +55,11 @@
 
                         <li class="list-item">
                             <a href="#">
-                                <i class="bi bi-wifi"></i>
-                            </a>
+                                <i class="bi bi-wifi info-button" onclick="mostrarInformacoes()">
+                                    <div class="info-message" id="infoMessage">
+                                        <strong>Rede: bahia_5G <br> senha: 123456789</strong><br>
+                                    </div>
+                                </i>
                         </li>
                     </ul>
 
@@ -162,12 +165,6 @@
                             <i class="bi bi-whatsapp"></i>
                         </a>
                     </li>
-
-                    <li>
-                        <a href="#">
-                            <i class="bi bi-wifi"></i>
-                        </a>
-                    </li>
                 </ul>
             </div>
 
@@ -175,6 +172,9 @@
 
         <p>© 2025 Bahia Gastrobar. Todos os direitos são reservados.</p>
     </footer>
+
+
+
 
 
 
