Alteração dos preços

--- a/index.html
+++ b/index.html
@@ -108,9 +108,8 @@
                                 <h3 class="tittle-foods">Baião de dois do Bahia</h3>
                                 <p>Feito com Feijão de corda, arroz, manteiga de
                                     garrafa calabresa, bacon queijo coalho, jabá desfiado e pimenta biquinho.</p>
-                                <b>individual: R$ 35,00</b>
                                 <b>Pequeno: R$ 50,00</b>
-                                <b>Grande: R$ 80,00</b>
+                                <b>Grande: R$ 90,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosEspeciais/bahiao.jpg" alt="">
                         </div>
@@ -120,13 +119,12 @@
                         <div class="div">
 
                             <div class="div-block">
-                                <h3 class="Tittle-foods">Baião com Picanha</h3>
+                                <h3 class="Tittle-foods">Baião de dois com Picanha</h3>
                                 <p>Feito com Feijão de corda, arroz, manteiga de
                                     garrafa calabresa, bacon queijo coalho, jabá desfiado, pimenta biquinho e Picanha.
                                 </p>
-                                <b>individual: R$ 55,00</b>
-                                <b>Pequeno: R$ 75,00</b>
-                                <b>Grande: R$ 120,00</b>
+                                <b>Pequeno: R$ 85,00</b>
+                                <b>Grande: R$ 138,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosEspeciais/bahiaoPicanha.jpg"
                                 alt="">
@@ -159,9 +157,9 @@
                                 <p>Nosso delicioso arroz biro biro ,é servido com couve refolgada, vinagrete e nossa
                                     suculenta Picanha.
                                 </p>
-                                <b>individual: R$ 55,00</b>
-                                <b>Pequeno: R$ 75,00</b>
-                                <b>Grande: R$ 120,00</b>
+                                <b>Pequeno: R$ 70,00</b>
+                                <b>Medio: R$ 90,00</b>
+                                <b>Grande: R$ 130,00</b>
                             </div>
                             <img class="modify image-foods" src="./src/image/cardapio/pratosEspeciais/biro-biro.jpg"
                                 alt="imagem do arroz biro biro com Picanha">
@@ -176,15 +174,31 @@
                                 <p>clássico feijão tropeiro, é servido com couve puxado na manteiga, torresmo, ovo
                                     mexido e a nossa picanha acompanha arroz e vinagrete.
                                 </p>
-                                <b>individual: R$ 65,00</b>
-                                <b>Pequeno: R$ 85,00</b>
-                                <b>Grande: R$ 120,00</b>
+                                <b>Pequeno: R$ 75,00</b>
+                                <b>Medio: R$ 95,00</b>
+                                <b>Grande: R$ 140,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosEspeciais/tropeiro.jpg"
                                 alt="imagem do prato tropeiro com picanha">
                         </div>
                     </li>
 
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Adicionais</h3>
+                                <b>Mandioca: R$ 8,00</b>
+                                <b>Queijo coalho fatia: R$ 8,00</b>
+                                <b>Ovo: R$ 4,00</b>
+                                <b>Salada : R$ 36,00</b>
+                                <b>bifé de picanha: R$ 18,00</b>
+                                <b>bifé de contra filé: R$ 15,00</b>
+                            </div>
+                         <!-- <img class="image-foods" src="./src/image/cardapio/porcao/picanhaali.png"
+                                alt="Prato com picanha com aligot"> -->
+                        </div>
+                    </li>
 
                 </ul>
             </section>
@@ -326,7 +340,8 @@
                                 <p>Acompanha Arroz, vinagrete, molho da casa e pães
                                     <br> Serve 2 pessoas.
                                 </p>
-                                <b>R$ 45,00</b>
+                                <b>Calabresa:R$ 50,00</b>
+                                <b>Calabresa com batata:R$ 60,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/porcao/calabresa.jpg"
                                 alt="Prato com porção de calabresa com cebola">
@@ -334,20 +349,20 @@
                     </li>
 
 
-                    <li class="food-line">
+                    <!-- <li class="food-line">
                         <div class="div">
 
                             <div class="div-block">
-                                <h3 class="tittle-foods">Batata simples 300g</h3>
+                                <h3 class="tittle-foods">Batata simples</h3>
                                 <p>Acompanha molho especial da casa.
-                                    <br> Serve 1 pessoas.
-                                </p>
-                                <b>R$ 25,00</b>
+                                    <b>Pequeno: R$ 12,00</b>
+                                    <b>Medio: R$ 20,00</b>
+                                    <b>Grande: R$ 40,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/porcao/batatafrita.jpg"
                                 alt="Prato com porção de batata frita">
                         </div>
-                    </li>
+                    </li> -->
 
 
 
@@ -356,10 +371,10 @@
 
                             <div class="div-block">
                                 <h3 class="tittle-foods">Batata com cheddar e Bacon</h3>
-                                <p>Acompanha molho especial da casa.
-                                    <br> Serve 1 pessoas.
-                                </p>
-                                <b>R$ 45,00</b>
+                                <p>Acompanha molho especial da casa.</p>
+                                    <b>Pequeno: R$ 12,00</b>
+                                    <b>Medio: R$ 20,00</b>
+                                    <b>Grande: R$ 40,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/porcao/batata-cheddar.jpg"
                                 alt="Prato com porção de batata frita com cheddar e bacon">
@@ -375,7 +390,8 @@
                                 <p>acompanha vinagrete, molho da casa e pães.
                                     <br> Serve 2 pessoas
                                 </p>
-                                <b>R$ 63,00</b>
+                                <b>contra filé: R$75,00</b>
+                                <b>contra filé com batata: R$85,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/porcao/contra.jpg"
                                 alt="Prato com porção de contra filé">
@@ -391,7 +407,8 @@
                                 <p>Contra filé, frango, calabresa, vinagrete, molho da casa e pães.
                                     <br> Serve 2 pessoas
                                 </p>
-                                <b>R$ 75,00</b>
+                                <b>Mista: R$ 80,00</b>
+                                <b>Mista com batata: R$ 90,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/porcao/mista.jpg"
                                 alt="Prato com porcão mista que inclui contra filé, frango e calabresa">
@@ -404,9 +421,8 @@
                             <div class="div-block">
                                 <h3 class="tittle-foods">Picanha Brasileira</h3>
                                 <p>Acompanha vinagrete, molho da casa e pães.
-                                    <br> Serve 2 pessoas
                                 </p>
-                                <b>R$ 33,00</b>
+                                <b>R$ 120,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/porcao/picanha-br.jpg"
                                 alt="Prato com picanha Brasileira">
@@ -424,6 +440,22 @@
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/porcao/picanhaali.png"
                                 alt="Prato com picanha com aligot">
+                        </div>
+                    </li>
+
+                    
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Adicionais</h3>
+                                <b>arroz branco pequeno: R$ 15,00</b>
+                                <b>arroz branco Grande: R$ 28,00</b>
+                                <b>arroz biro biro pequeno: R$ 23,00</b>
+                                <b>arroz biro biro Grande: R$ 36,00</b>
+                            </div>
+                         <!-- <img class="image-foods" src="./src/image/cardapio/porcao/picanhaali.png"
+                                alt="Prato com picanha com aligot"> -->
                         </div>
                     </li>
 
@@ -887,7 +919,7 @@
                 </ul>
             </section>
 
-            </section>
+            
         </div>
     </main>
 
