alteração da jack

--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                                 <p>Combo acompanhado com 4 gelo de coco e 4 red bull.</p>
                                 <b>R$ 200,00</b>
                             </div>
-                            <img class="image-foods" src="./src/image/cardapio/combo/bu.avif"
+                            <img class="image-foods" src="./src/image/cardapio/combo/jack.webp"
                                 alt="garrafa deJack Daniels Tradicional com 4 red bull">
                         </div>
                     </li>
