alteração de preço

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <a href="#">
                                 <i class="bi bi-wifi info-button" onclick="mostrarInformacoes()">
                                     <div class="info-message" id="infoMessage">
-                                        <strong>Rede: bahia_5G <br> senha: 123456789</strong><br>
+                                        <strong>Rede: bahia_5G <br> senha: 20182024</strong><br>
                                     </div>
                                 </i>
                         </li>
@@ -140,9 +140,10 @@
                                 <p>Acompanha: arroz branco, torresmo, farofa,couve refolgada, laranja e molho de
                                     pimenta.
                                 </p>
-                                <b>individual: R$ 55,00</b>
-                                <b>Pequeno: R$ 75,00</b>
-                                <b>Grande: R$ 120,00</b>
+                                <b>individual: R$ 30,00</b>
+                                <b>Pequeno: R$ 45,00</b>
+                                <b>Média: R$ 55,00</b>
+                                <b>Grande: R$ 85,00</b>
                             </div>
                             <img class="image-foods" src="./src/image/cardapio/pratosEspeciais/feijoada.jpg"
                                 alt="Prato de feijpada completa">
@@ -460,6 +461,28 @@
                     </li>
 
 
+                </ul>
+            </section>
+
+            <section class="bebidasNAlcool">
+
+                <h2 class="tittle">Sucos naturais</h2>
+
+                <ul class="foods-list">
+
+                    <li class="food-line">
+                        <div class="div">
+
+                            <div class="div-block">
+                                <h3 class="tittle-foods">Sucos naturais</h3>
+                                <p>Temos nos sabores, Maracuja, Abacaxi, Morango e Limão.</p>
+                                <b>Copo: R$ 13,00</b>
+                                <b>Jarras: R$ 25,00</b>
+                            </div>
+                            <img class="image-foods" src="./src/image/cardapio/semAlcool/sucos.jpg"
+                                alt="Garrafa de Aguá 500ml">
+                        </div>
+                    </li>
                 </ul>
             </section>
 
@@ -897,27 +920,7 @@
                 </ul>
             </section>
 
-            <section class="bebidasNAlcool">
-
-                <h2 class="tittle">Sucos naturais</h2>
-
-                <ul class="foods-list">
-
-                    <li class="food-line">
-                        <div class="div">
-
-                            <div class="div-block">
-                                <h3 class="tittle-foods">Sucos naturais</h3>
-                                <p>Temos nos sabores, Maracuja, Abacaxi, Morango e Limão.</p>
-                                <b>Copo: R$ 13,00</b>
-                                <b>Jarras: R$ 25,00</b>
-                            </div>
-                            <img class="image-foods" src="./src/image/cardapio/semAlcool/sucos.jpg"
-                                alt="Garrafa de Aguá 500ml">
-                        </div>
-                    </li>
-                </ul>
-            </section>
+           
 
             
         </div>
